# the_excel_servant

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  serve_script.py  up.cmd
the_excel_servant/: main.py
